2009-12-11  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Put -umbrella linker flag into a variable so that it can be overridden.

        * Configurations/WebCore.xcconfig:

2009-12-11  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        body with display:inline causes crash
        https://bugs.webkit.org/show_bug.cgi?id=32371

        Tests: fast/inline/inline-body-crash.html
               fast/inline/inline-body-with-scrollbar-crash.html

        * page/FrameView.cpp:
        (WebCore::FrameView::createScrollbar):
        (WebCore::FrameView::layout):

2009-12-11  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Sam Weinig.

        https://webkit.org/b/22851 - Remove defunct FIXME.

        * html/HTMLPlugInElement.cpp:
        (WebCore::HTMLPlugInElement::HTMLPlugInElement): This flag was removed completely
          from the HTMLFrameOwnerElement chain of classes.

2009-12-11  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Small refactoring to get rid of some extra unneeded selection-related work
        in RenderLayer::scrollToOffset and separate caret and range selection
        logic in FrameView::layout. This may be useful later when changing how
        the range selection logic works to fix layout reentrancy problems.

        * page/Frame.cpp: Removed invalidateSelection.
        * page/Frame.h: Ditto.

        * page/FrameView.cpp:
        (WebCore::FrameView::layout): Call SelectionController::setNeedsLayout
        and Frame::selectionLayoutChanged instead of calling
        Frame::invalidateSelection, which was just a function that called
        both of those others.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::scrollToOffset): Call
        SelectionController::setNeedsLayout instead of calling
        Frame::invalidateSelection. This call site only needs the caret-related